--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
         .container
           %a.brand{href: '#'} Мой дом
           %ul.nav
-            %li.active
-              %a{href: '#'} Home
+            %li= link_to 'Главная', root_path
+            %li= link_to 'Устройства', devices_path
     .container
       = yield
