--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,5 +13,6 @@
           %ul.nav
             %li= link_to 'Главная', root_path
             %li= link_to 'Устройства', devices_path
+            %li= link_to 'Адреса', addresses_path
     .container
       = yield
